--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
         <img src="./img/cute_dog.jpg" alt="Cute Dog Photo">
         
         <h1>Tables</h1>
-        
+        <a href="login.html">Log in here!</a>
 
     </main>
     <!-- This is where the final bottom information like copyright goes -->
