--- a/html/index.html
+++ b/html/index.html
@@ -23,8 +23,25 @@
         <h1>Section 3</h1>  
         <img src="./img/cute_dog.jpg" alt="Cute Dog Photo">
         
-        <h1>Tables</h1>
         <a href="login.html">Log in here!</a>
+        <a href="https://www.google.ca/">Go to google!</a>
+
+        <h1>Tables</h1>
+        <!-- Unordered List -->
+        <h2>Food to buy</h2>
+        <ul>
+            <li>Oranges</li>
+            <li>Bananas</li>
+        </ul>
+        
+        <!-- Ordered List -->
+        <h2>Favorite Foods</h2>
+        <ol>
+            <li>Steak</li>
+            <li>Bananas</li>
+            <li>Fish Stew</li>
+            <li>Fish Tacos</li>
+        </ol>
 
     </main>
     <!-- This is where the final bottom information like copyright goes -->
