--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
         <a href="login.html">Log in here!</a>
         <a href="https://www.google.ca/">Go to google!</a>
 
-        <h1>Tables</h1>
+        <h1>Lists</h1>
         <!-- Unordered List -->
         <h2>Food to buy</h2>
         <ul>
@@ -42,6 +42,63 @@
             <li>Fish Stew</li>
             <li>Fish Tacos</li>
         </ol>
+
+        <h1>Tables</h1>
+        <table>
+            <caption>Favorite Foods</caption>
+            <tr>
+                <th>Names</th>
+                <th>Favorite Foods</th>
+            </tr>
+            <tr>
+                <td>Nathan</td>
+                <td>Carrots</td>
+            </tr>
+            <tr>
+                <td>Todd</td>
+                <td>Pie</td>
+            </tr>
+            <tr>
+                <td>Lucas</td>
+                <td>Steak</td>
+            </tr>
+            <tr>
+                <td>Ben</td>
+                <td>Burritos</td>
+            </tr>
+            <tr>
+                <td>Josh</td>
+                <td>Ice</td>
+            </tr>
+            <tr>
+                <td>Bert</td>
+                <td>Double Cheeseburger</td>
+            </tr>
+            <tr>
+                <td>Omkar</td>
+                <td>Air</td>
+            </tr>
+            <tr>
+                <td>Cai</td>
+                <td>food</td>
+            </tr>
+            <tr>
+                <td>Chung</td>
+                <td>Poutine</td>
+            </tr>
+            <tr>
+                <td>Jasper</td>
+                <td>Pachos</td>
+            </tr>
+            <tr>
+                <td>Laura</td>
+                <td>Bubblegum</td>
+            </tr>
+            <tr>
+                <td>Ryan</td>
+                <td>Milkshake</td>
+            </tr>
+        </table>
 
     </main>
     <!-- This is where the final bottom information like copyright goes -->
