Added Layout and Footer for Table

--- a/html/index.html
+++ b/html/index.html
@@ -98,6 +98,12 @@
                 <td>Ryan</td>
                 <td>Milkshake</td>
             </tr>
+            <tfoot>
+                <tr>
+                    <td>Top Rated Food</td>
+                    <td>Steak</td>
+                </tr>
+            </tfoot>
         </table>
 
     </main>
