--- a/html/layout.html
+++ b/html/layout.html
@@ -31,7 +31,11 @@
             </section>
             <section class="red">
                 <div>
-
+                    <form method="GET" action="login">
+                        <input type="text" name="username">
+                        <input type="password" name="password">
+                        <button type="submit">Sign In</button>
+                    </form>
                 </div>
 
                 <div>
