POST Request instead of GET

--- a/html/layout.html
+++ b/html/layout.html
@@ -31,7 +31,7 @@
             </section>
             <section class="red">
                 <div>
-                    <form method="GET" action="login">
+                    <form method="POST" action="login">
                         <input type="text" name="username">
                         <input type="password" name="password">
                         <button type="submit">Sign In</button>
