Added Styling Tags

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
     <!-- This is where all of the main text / info goes -->
     <main>
         <h1>Random Text</h1>
-        <p>Woah! That is my amazing website!</p>
+        <p><b>Woah! That is my amazing website!</b></p>
         <h2>Subsection</h2>
         <h1>Section 2</h1>
         <h1>Section 3</h1>  
@@ -30,14 +30,14 @@
         <!-- Unordered List -->
         <h2>Food to buy</h2>
         <ul>
-            <li>Oranges</li>
-            <li>Bananas</li>
+            <li><mark><i>Oranges</i></mark></li>
+            <li><em>Bananas</em></li>
         </ul>
         
         <!-- Ordered List -->
         <h2>Favorite Foods</h2>
         <ol>
-            <li>Steak</li>
+            <li><del>Steak</del></li>
             <li>Bananas</li>
             <li>Fish Stew</li>
             <li>Fish Tacos</li>
@@ -106,6 +106,32 @@
             </tfoot>
         </table>
 
+        <pre>
+
+            aoiadjwoijawd
+
+            aiodjwijopadwoijawd
+
+
+            awdioawdoij
+
+        </pre>
+        <p>
+            aoiadjwoijawd
+
+            aiodjwijopadwoijawd
+
+
+            awdioawdoij
+        </p>
+        <p>
+            &copy;
+            &uml;
+            &amp;
+            &frac34;
+            &divide;
+            &times;
+        </p>
     </main>
     <!-- This is where the final bottom information like copyright goes -->
     <footer>
