Added Classes, and additional selectors

--- a/css/dog.html
+++ b/css/dog.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <!-- About Me Section -->
-        <section id="about">
+        <section id="about" class="section">
             <h1>About Me</h1>
             <div>
                 <p>I am really awesome.</p>
@@ -14,18 +14,23 @@
         </section>
 
         <!-- Fav Foods Section -->
-        <section id="foods">
+        <section id="foods" class="section">
             <h1>My Favorite Foods</h1>
+            <p class="fav_foods">I love corn</p>
+            <p class="fav_foods">I love potatoes</p>
+            <p class="fav_foods">I love carbs</p>
             <div>
-                <p>I love corn</p>
+                <p class="fav_foods">I love corn inside div</p>
             </div>
             <div>
 
             </div>
         </section>
+        
         <!-- Location Section -->
-        <section id="location">
+        <section id="location" class="section">
             <h1>My Location</h1>
+            <p>Woah here is my house</p>
             <div>
 
             </div>
