--- a/css/dog.html
+++ b/css/dog.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
 <!-- Main HTML Document for styling examples -->
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <!-- About Me Section -->
-        <section id="about" class="section">
-            <h1>About Me</h1>
-            <div>
-                <p>I am really awesome.</p>
-            </div>
-        </section>
 
-        <!-- Fav Foods Section -->
-        <section id="foods" class="section">
-            <h1>My Favorite Foods</h1>
-            <p class="fav_foods">I love corn</p>
-            <p class="fav_foods">I love potatoes</p>
-            <p class="fav_foods">I love carbs</p>
-            <div>
-                <p class="fav_foods">I love corn inside div</p>
-            </div>
-            <div>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-            </div>
-        </section>
-        
-        <!-- Location Section -->
-        <section id="location" class="section">
-            <h1>My Location</h1>
-            <p>Woah here is my house</p>
-            <div>
+<body>
+    <!-- About Me Section -->
+    <section id="about" class="section">
+        <h1>About Me</h1>
+        <div>
+            <p>I am really awesome.</p>
+        </div>
+    </section>
 
-            </div>
-        </section>
-    </body>
+    <!-- Fav Foods Section -->
+    <section id="foods" class="section">
+        <h1>My Favorite Foods</h1>
+        <p class="fav_foods">I love corn</p>
+        <p class="fav_foods">I love potatoes</p>
+        <p class="fav_foods">I love carbs</p>
+        <p class="fav_foods">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mattis, ipsum varius porttitor
+            convallis, purus urna molestie enim, non tincidunt nibh magna ut neque. Praesent id nisl tortor. Suspendisse
+            dapibus est suscipit rutrum congue. Phasellus vitae arcu a quam fermentum placerat at ut neque. Aenean
+            sodales ante in mauris aliquam tempor. Aenean vulputate interdum tristique. Vestibulum ante ipsum primis in
+            faucibus orci luctus et ultrices posuere cubilia curae; Aenean molestie vitae metus et condimentum. Donec et
+            interdum mi, et tempor sem. Proin congue mi nisl, at feugiat justo hendrerit ut. Sed risus orci, dapibus ut
+            dolor ut, faucibus auctor eros.
+
+            In maximus, nisi at sollicitudin aliquam, lectus nunc consectetur dui, at condimentum elit tellus quis
+            magna. Aenean ultricies consectetur nisi, sed semper lorem dictum sit amet. Cras in ultricies lacus. Quisque
+            dignissim magna euismod aliquet mollis. Pellentesque non elementum nulla, non bibendum orci. Proin orci
+            tellus, porttitor eu tincidunt finibus, luctus vitae tortor. Fusce sit amet sapien et dolor molestie
+            pharetra. Duis vel feugiat enim, eget eleifend odio. Pellentesque tortor leo, facilisis maximus elit eu,
+            scelerisque vestibulum dolor. Fusce dignissim sit amet tellus at luctus. Quisque non placerat quam, non
+            ornare sem.
+
+            Donec facilisis dictum ex a ultricies. Vivamus non lorem massa. Aenean suscipit risus ut congue fringilla.
+            Mauris eu faucibus erat. Nullam semper fermentum sem quis pharetra. Praesent iaculis euismod pulvinar. Donec
+            vitae lacinia justo, et laoreet massa.
+
+            Duis dictum mattis varius. Donec sollicitudin, sem nec blandit scelerisque, lorem lacus posuere turpis, et
+            consectetur metus turpis ac neque. Morbi eu commodo orci. Nullam porttitor risus dui, id ornare mauris
+            tincidunt at. Donec et metus ut risus porttitor blandit. Donec accumsan leo et sem lacinia molestie. Fusce
+            id varius turpis. Nam hendrerit augue quis sem ultricies dapibus. Vestibulum ante ipsum primis in faucibus
+            orci luctus et ultrices posuere cubilia curae; Duis a diam orci. Nam at enim non nisl interdum varius ut in
+            metus. Phasellus sit amet nibh id turpis convallis condimentum. Sed ligula neque, luctus id consectetur
+            eget, ultrices quis dolor. Proin blandit nisi eu velit luctus, eget tempor velit egestas. Vestibulum et
+            massa in ex porttitor cursus. Ut quis quam eu mauris imperdiet bibendum id ut est.</p>
+        <div>
+            <p class="fav_foods">I love corn inside div</p>
+        </div>
+        <div>
+
+        </div>
+    </section>
+
+    <!-- Location Section -->
+    <section id="location" class="section">
+        <h1>My Location</h1>
+        <p>Woah here is my house</p>
+        <div>
+
+        </div>
+    </section>
+</body>
+
 </html>
