--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<a href="html/index.html"></a>
-<a href="css/dog.html"></a>
+<a href="html/index.html">View the basic HTML site</a>
+<a href="css/dog.html">View the CSS site</a>
